<resources>
    <string name="app_name">TripTrooperApp</string>

    <!--For Default texts-->
    <string name="default_btn">Default Button</string>
    <string name="main_title">Main Title</string>
    <string name="side_title">Side Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="default_list_name">Default List Name</string>

    <!-- Content-->
    <string name="TripTrooperHeader">Trip Trooper</string>
    <string name="list_header">My Lists</string>
    <string name="group_list_header">My Groups</string>
    <string name="new_group_header">New Group</string>
    <string name="new_group_sub_header">Please enter your group details</string>
    <string name="group_name_place_holder">Group Name</string>
    <string name="group_destination_place_holder">Group Destination</string>
    <string name="join_group_header">Join Group</string>
    <string name="group_code_place_holder">Group Code</string>
    <string name="list_name_place_holder">List Name</string>
    <string name="delete_btn">Delete</string>
    <string name="place_list_header">Your Places</string>
    <string name="channel_name">NOTIF</string>
    <string name="channel_description">NOTIFCHANNEL</string>

    <string name="no_list">Embark on an adventure by creating your personalized travel list with us—add, organize,
        and realize your dream destinations all in one place!</string>
    <string name="no_group">Set sail on a journey of collaboration by creating your custom travel group with us—invite friends, plan together,
        and share the excitement of turning your collective travel dreams into reality, all in one convenient location!</string>
    <string name="no_places">Your list is currently a blank canvas awaiting your inspiration.
        Tap the add button to begin curating your places and then unveil your perfect itinerary with a
        click on the magic button. Start the adventure!</string>
    <!-- User Auth -->

    <string name="web_client_id">341689223031-547ca9idtu3985lrl0uduo6ifpatgd7f.apps.googleusercontent.com</string>
    <string name="api_ip_address">https://128.189.128.116:8081/</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- The above is when connected to ubsecure. When testing with aws use: https://34.220.237.44:8081/-->


</resources>